--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://localhost:3000",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,6 +13,8 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@types/redux-logger": "^3.0.9",
     "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
@@ -19,10 +22,13 @@
     "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "react-toastify": "^9.1.2",
     "redux-logger": "^3.0.6",
+    "redux-typescript": "^1.2.1",
     "swiper": "^9.1.1"
   },
   "devDependencies": {
+    "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
